--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-native-gifted-chat": "^2.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "4.12.0",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
     "validate.js": "^0.13.1"
   },
   "devDependencies": {
