--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,22 @@
-node_modules/
-.expo/
-dist/
-npm-debug.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-*.orig.*
-web-build/
+#Frontend
+frontend/node_modules/
+frontend/.expo/
+frontend/dist/
+frontend/npm-debug.*
+frontend/*.jks
+frontend/*.p8
+frontend/*.p12
+frontend/*.key
+frontend/*.mobileprovision
+frontend/*.orig.*
+frontend/web-build/
+frontend/.vscode/
 
 # macOS
-.DS_Store
+frontend/.DS_Store
 
 # Temporary files created by Metro to check the health of the file watcher
-.metro-health-check*
+frontend/.metro-health-check*
+#Backend
+backend/env/
+backend/__pycache__/
