--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,9 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
-    "expo": "^52.0.0",
+    "expo": "~52.0.24",
     "expo-font": "~13.0.2",
-    "expo-splash-screen": "~0.29.18",
+    "expo-splash-screen": "^0.29.19",
     "expo-status-bar": "~2.0.0",
     "firebase": "^9.9.0",
     "react": "18.3.1",
